Updated 14.Constraint (markdown)

--- a/14.Constraint.md
+++ b/14.Constraint.md
@@ -860,7 +860,436 @@ The below figure shows the output of the foreach constraint.
 
 **GitHub Lab Output link:**
 
-   
+***
+## Solve before Constraint 
+
+This constraint property is used inside the constraint block for specifying the constraint solving. If the variables are dependent as the constraint are bidirectional, the value of one variable will influence the other variable. This solve-before can change the probability distribution by forcing the constraint solver to choose the order in which constraints are to be solved.
+
+* **syntax:**   
+`constraint constraint_name {a==1 -> b==1;solve a before b}`  
+
+Let's take an example for a better understanding of the solve-before constraint  
+
+* **Example:**  
+
+            class without_solve_before;  
+            rand bit value1;  
+            rand bit [3:0] value2;  
+            constraint val {value1==1 -> value2==1;}  
+            endclass  
+
+          class with_solve_before;  
+            rand bit value1;  
+            rand bit [3:0] value2;  
+            constraint valu {value1==1 -> value2==1;  
+                            solve value1 before value2;}  
+          endclass  
+
+          module solve_before();  
+             without_solve_before gen1 = new();  
+             with_solve_before gen2 = new();  
+
+            initial  
+            begin  
+              $write("%c[1;31m \t------Without solve before----------\n",27);  
+              for(int i=1;i<=10;i++)  
+              begin
+                  void'(gen1.randomize());  
+                  #1 $display("\t[%0t] @ iteration: %0d -----> value1: %0d \t value2: %0d",$time,i,gen1.value1,gen1.value2);  
+              end  
+              $write("\n%c[1;34m\t -----with solve before--------\n",27);  
+              for(int i=1;i<=10;i++)  
+              begin  
+                  void'(gen2.randomize());  
+                  #1 $display("\t[%0t] @ iteration: %0d -----> value1: %0d \t value2: %0d",$time,i,gen2.value1,gen2.value2);  
+              end  
+              $write("%c[0m",27);  
+            end  
+
+          endmodule : solve_before  
+
+
+In the above example, took two classes named without_solve_before and with_solve_before which have objects gen1 and gen2 respectively. Both have the same constraints that if the value1 is 1 then the value2 should be 1. As the constraint solver is bidirectional the probability to choose a value2 also affects the probability to choose value1.  
+The probability to choose individually.
+value1 is 1/2     
+value2 is 1/16   
+
+* **output:**  
+
+![solve before output 1](https://user-images.githubusercontent.com/110412468/191438631-cd63ca91-4176-4746-9f20-b741177498fc.png)
+
+        Fig.  
+
+In the above output, the first 32 iterations are used without solve-before and the next 10 iterations are used with solve before.
+
+without: both value1 and value2 constraints are taken into consideration i.e., probability of value1 to get 1 is 1/2 and for value2 to be 1 is 1/16,but for getting value1 as 1 & value2 as 1 is (1/2)*(1/16)=1/32.
+with: here the constraint solver first randomizes value1 and depending upon the value1, value2 is solved. so the probability of getting a value1 as 1 is 1/2.
+
+so in the first 32 iterations, there was only 1 iteration that got value1 of 1 i.e., **0.03%**, but using solve before value1 got 1 for every alternative iteration means **50%**.
+
+**Github code link:**  
+**Github output link:**  
+
+* **limitations:**
+
+1.  can't use randc variables, as they were always allowed to solve first, if used then without solve-before is not considered.
+2.  shouldn't have circular dependency i.e., solve value1 before value2 and solve value2 before value1, if so through error as shown below.  
+
+![solve before error 1](https://user-images.githubusercontent.com/110412468/191438870-9644da50-c606-4c72-be1b-e28c98d8ad56.png)  
+
+         Fig.
+
+***
+
+##  Static Constraint  
+
+static constraints are shared across all the objects of that class.  
+A static constraint mode can be enabled or disabled by any object handle of that class which reflects in all the classes.  
+
+* **syntax:**  
+ `static constraint  cons_name {constraint1; 
+                               constraint2; 
+                               ........ 
+                               constraintN;} `   
+* **Example:**  
+
+           class class1;
+              rand bit [2:0] value;
+              constraint cons {value==1;}
+           endclass
+
+           class class2;
+              rand bit [2:0] value; 
+              static constraint cons {value==1;}
+           endclass
+           
+           initial
+           begin
+               object_1.cons.constraint_mode(0);
+                for(int i=1;i<=3;i++)
+                begin
+                  void'(object_1.randomize());
+                  void'(object_2.randomize());
+                   #1 $display("\t[%0t] @ iteration: %0d -----> value in object_1: %0d  value in object_2: %0d",$time,i,object_1.value,object_2.value);
+                end
+           
+               object_3.cons.constraint_mode(0);
+                for(int i=1;i<=3;i++)
+                begin
+                  void'(object_3.randomize());
+                  void'(object_4.randomize());
+                   #1 $display("\t[%0t] @ iteration: %0d -----> value in object_3: %0d  value in object_4: %0d",$time,i,object_3.value,object_4.value);
+                end
+           end
+
+In the above example, there were two classes named class1 & class2 with objects 1&2 for class1 and objects 3&4 for class2. Here the constraint for both classes is the same so the value should be always 1 if the constraint is on.  
+If the constraint is off then the value will have other than 1.  
+
+![static gif](https://user-images.githubusercontent.com/110412468/191321463-be83ae86-2f4b-49f5-9042-3c051330d1ed.gif)  
+
+         gif.  
+
+From the above gif, can say that if the non-static constraint is turned off/on by using a single object handle then the constraint is applicable to that particular object whereas in static constraint, if the constraint is turned off/on then it is applicable for every object of that class.
+
+* **output:**   
+
+![static constraint output 1 ](https://user-images.githubusercontent.com/110412468/191439132-d4bcfba3-0a7e-4a55-b329-cc0446021778.png)  
+      
+Class 1 has two objects 1&2 and class2 has objects 3&4.In class1 used non-static constraint, turned off in object 1 but still, the constraint is on in object 2, but used static constraint in class2, and turned off in object 3 then the constraint has been turned off in object 4 as well.
+
+**Github code link:**  
+**Github output link:**  
+
+***
+
+##  Randomization Methods  
+
+In general, there will be three randomize methods:  
+
+* randomize();
+* pre_randomize();
+* post_randomize();  
+
+![randomization diag 1](https://user-images.githubusercontent.com/110412468/191521969-bf7cd2c8-aa55-4074-a152-f86f390fa311.png)  
+
+      Fig.  
+
+when a randomize function is called generates random values for variables that were declared as rand/randc by considering the constraints. It is a virtual function that is not overridable and on successful completion of randomization returns 1 else 0.
+
+Actually, before performing the actual randomization, the simulator first enters into pre_randomize before randomizing, and then on successful randomization simulator enters into the post_randomize function which is also overridable. If the randomization fails due to any issues like constraint conflicts then the simulator doesn't enter into post_randomize and returns 0.  
+
+### randomize:
+
+randomize is a virtual function of int type returns 1 on successful completion else 0
+
+* **Example:**  
+
+             class generator;
+                rand bit [2:0] value;
+                constraint cons {value==5;}
+             endclass
+
+             initial
+             begin
+                $display("\tCalling Randomize....");
+                check=gen.randomize();
+                $write("\tvalue: %0d ",gen.value);
+                if(check)
+                   $display("\tRandomization successful");
+                else
+                   $display("\tRandomization failed");
+                $display("\tCalling Randomize....");
+                check=gen.randomize()with{value==2;};
+                $write("\tvalue: %0d ",gen.value);
+                if(check)
+                  $display("\tRandomization successful");
+                else
+                  $display("\tRandomization failed");
+                end  
+
+* **output:**  
+
+![randomization output](https://user-images.githubusercontent.com/110412468/191439901-f4af0390-cd63-4a2a-acf1-2d4179c49f4b.png)  
+
+In the above example calling randomize function and storing the value returned by the function in the check variable, if randomization was done taking constraint that value must be 5 and returned 1 based on the check used to print the randomization status message.  
+In the first randomization, there is no conflict so randomization completes successfully and returns 1 so if condition satisfies so prints as randomization successful, In the next call conflict between constraints so randomization doesn't complete so returns 0 so prints as randomization failed.   
+
+**Github code link:**  
+**Github output link:**  
+
+### pre_randomize:
+
+This is a void function type that can be overridable called before the actual randomization performs.
+
+* **syntax:**  `function void pre_randomize();`
+
+* **Example:**  
+
+          class generator;
+               rand bit [2:0] value;
+               constraint exp { value>5;}
+  
+               function void pre_randomize();
+                  if(i%2==0)
+                  begin
+                     rand_mode(0);
+                     $display("\tstopping randomization");
+                  end
+                  else
+                     rand_mode(1);
+                   i++;
+               endfunction
+         endclass
+
+          module pre_randomization();
+ 
+               generator gen = new();
+ 
+              initial
+              begin
+ 
+                for(int i=1;i<=4;i++)
+               begin
+                 $display("\t[%0t]Calling Randomize....",$time);
+                 void'(gen.randomize());
+                 #1  $display("\t[%0t] @ iteration: %0d -----> value: %0d ",$time,i,gen.value);
+               end
+             end
+           endmodule
+
+* **output:**  
+
+![pre randomization output](https://user-images.githubusercontent.com/110412468/191439947-5ee9b134-44a1-4c86-98e6-2eabd835bb3e.png)  
+
+        Fig.  
+
+In the example, calling pre_randomize function and inside that, if condition satisfies then randomization is stopping in pre_randomize so simulator exits the randomize function without performing the randomization which means rand variables will have previous values. In iterations 1,3 randomization is stopped, so it has previous values but in iterations 2,4 randomization is done.  
+
+**Github code link:**  
+**Github output link:**  
+
+### post_randomize:
+
+This is also a void function type that can be overridable runs after the randomization is performed.
+
+* **syntax:** `function void post_randomize();`
+
+* **Example:**  
+
+          function void pre_randomize();
+               $display("\tI'm in pre_randomize function");
+               check=0;
+             endfunction
+             function void post_randomize();
+               $display("\tI'm in post_randomize function");
+               check=1;
+             endfunction  
+
+             initial
+                 begin
+              
+                     $display("\t[%0t]Calling Randomize....",$time);
+                     check=gen.randomize();
+                     #1  $display("\t[%0t] @ iteration: 1 -----> value: %0d ",$time,gen.value);
+                     if(check==1)
+                       $display("%c[1;32m\tRandomization is performed%c[0m",27,27);
+                     else
+                       $display("%c[1;31m\tRandomization is not performed%c[0m",27,27);
+                     $display("\t[%0t]Calling Randomize....",$time);
+                     check=gen.randomize()with{value<5;};
+                      #1  $display("\t[%0t] @ iteration: 2  -----> value: %0d ",$time,gen.value);
+                     if(check==1)
+                       $display("%c[1;32m\tRandomization is performed%c[0m",27,27);
+                     else
+                       $display("%c[1;31m\tRandomization is not performed%c[0m",27,27);
+ 
+                 end
+
+* **output:**  
+
+![post randomization](https://user-images.githubusercontent.com/110412468/191440019-e20a649e-83bf-40b6-b1d8-e75f6216db0a.png)  
+
+        Fig.  
+
+In the first iteration of the example calling randomize function, there was no conflict so entering into both pre as well as post after randomizing so printed as randomization is successful but in the second iteration there was a conflict so randomization doesn't completes and comes back and printing as randomization is failed. 
+
+**Github code link:**  
+**Github output link:**  
+
+ 
+***
+
+##  Inline Constraint 
+
+Consider that some variables are needed to be randomized in 100 iterations but in the first 95 iterations user needs the common constraints, and in the last 5 iterations user wants to add some more constraints along with previous constraints, then instead of writing in different classes user can just add those extra constraints from where the randomization function is called using with the keyword as shown.
+
+* **syntax:** 
+
+`obj_hndl.randomize()with{extra_constraints};`  
+
+These inline constraints just act as extra constraints by taking the previous constraints into consideration but not overriding the previous constraints.
+For example, if variable >5 is declared in class and if added one more inline constraint as variable<10 then the final value of the variable will be between 5 and 10.
+
+* Only inline constraint
+* inline constraint along with class constraint
+* inline conflict with class constraint 
+
+
+### Only inline constraint  
+
+* **Example:**
+
+          class generator;
+            rand bit [2:0] value;
+          endclass
+
+          module only_inline();
+             generator gen = new();
+            initial
+            begin
+              for(int i=1;i<=2;i++)
+              begin
+                void'(gen.randomize()with{value==3;});
+                #1 $display("\t[%0t] @ iteration: %0d -----> value: %0d",$time,i,gen.value);
+              end
+            end
+          endmodule
+
+
+In the above example, there were no constraints in class so the value can be anywhere between 0 to 7 as it is 3-bit, but calling the randomize function along with inline constraint that value should be 3.
+
+* **output:**  
+
+![only inline](https://user-images.githubusercontent.com/110412468/191440392-7a05acc1-add4-4f86-801e-92fa9bf8859f.png)  
+
+        Fig.  
+
+As per the inline constraint, the value must be 3 so in both iterations the value is same.
+
+
+**Github code link:**  
+**Github output link:**  
+
+### inline constraint along with class constraint  
+
+* **Example:** 
+
+          class generator;
+            rand bit [2:0] value;
+            constraint exp { value>2;}
+          endclass
+
+          module inline_constraint();
+             generator gen = new();
+            initial
+            begin
+                void'(gen.randomize());
+                #1 $display("\t[%0t] @ iteration: %0d -----> value: %0d",$time,i,gen.value);
+                void'(gen.randomize()with{value==7;});
+                #1 $display("\t[%0t] @ iteration: %0d -----> value: %0d",$time,i,gen.value);
+            end
+          endmodule
+
+In the above example, the class has one constraint that the value should be greater than 2 and one more constraint is given through inline that the value should be 7.
+
+* **output:**  
+
+ 
+![class and inline output 1](https://user-images.githubusercontent.com/110412468/191521328-12507066-8ba1-4d81-b08c-ab7602dacb92.png)  
+
+         Fig.  
+
+The initial constraint in class is value >2 so its first iteration value is in the range of 2 to 7, but in the second  iteration giving value must be 7 from inline so the value is 7  
+
+**Github code link:**  
+**Github output link:**  
+
+
+### inline conflict with class constraint 
+
+* **Example:**
+
+          class generator;
+            rand bit [2:0] value;
+            constraint cons {value==5;};
+          endclass
+
+          module conflict_with_inline();
+             generator gen = new();
+             int check;
+            initial
+            begin
+              for(int i=1;i<=2;i++)
+              begin
+                check=gen.randomize()with{value==3;};
+                if(check)
+                  $display("\tRandomization Done \t @ iteration: %0d -----> value: %0d",i,gen.value);
+                else
+                  $display("\tRandomization Failed \t @ iteration: %0d -----> value: %0d",i,gen.value);
+              end
+            end
+          endmodule  
+In the above example, the class has a constraint that the value must be 5 and from the inline constraint, there was one more constraint mentioned that value should be 3.
+* **output:**  
+
+![conflict with inline](https://user-images.githubusercontent.com/110412468/191441019-b10913ac-5cf4-46fe-837d-754e52241359.png)  
+
+           Fig.  
+
+Here the constraint solver takes both the constraints into consideration which means there was a conflict between these constraints, in these times randomization will not happen and returns the value 0. so based on the check display message is printed.
+
+**Github code link:**  
+**Github output link:**  
+
+**note:**  
+* Not throwing any error from Questa sim 10.6 version simulator
+* In mentor graphics of 2021 version it's throwing an error that constraint conflict arose as shown below
+
+![constraint_conflict_error_output](https://user-images.githubusercontent.com/110412468/191441854-7f18230c-ee58-4863-9ec5-9d7308701adb.png)  
+
+             Fig.  
+
+
 
 
 
