Updated 13.Interface (markdown)

--- a/13.Interface.md
+++ b/13.Interface.md
@@ -83,8 +83,34 @@ Below diagram shows connecting design and testbench with the interface.
     
     endmodule:top
 
-    
+Design code for AND gate
+
+     //module declaration  
+     module andg(input_a,input_b,output_y);  
+     input input_a,input_b;  
+     output output_y;  
+     //assign output  
+     assign output_y=input_a&input_b;  
+     endmodule:andg  
   
+Testbench for AND gate
+
+     //testbench for and gate  
+     module tb(and_if inf);  
+     initial begin  
+     $display("\n// and gate output");  
+     $monitor("\ninput_a=%b\t input_b=%b\t output_y=%b",inf.input_a,inf.input_b,inf.output_y);  
+     inf.input_a = 0; inf.input_b = 0;  
+     #1;  
+     inf.input_a = 1; inf.input_b = 0;  
+     #1;  
+     inf.input_a = 0; inf.input_b = 1;  
+     #1;  
+     inf.input_a = 1; inf.input_b = 1;  
+     end  
+     endmodule:tb  
+
+
 
 Below figure shows the output of **and** **gate** using interface.
 
