Updated 13.Interface (markdown)

--- a/13.Interface.md
+++ b/13.Interface.md
@@ -172,6 +172,27 @@ Parameters can be used in interfaces to make vector sizes and other declarations
  
     endmodule:top
 
+Test bench for counter
+
+     //testbench for up counter
+     module upcounter_testbench(count_if inf);
+     initial begin
+     $display("\n // Parameterised interface example");
+     //used to monitor the count values
+     $monitor("\ncount=%0d",inf.counter);
+     inf.clk=0;
+     forever #5 inf.clk=~inf.clk;
+     end
+     initial begin
+     inf.reset=1;
+     #20;
+     inf.reset=0;
+     #70 $finish;
+     end
+     endmodule:upcounter_testbench
+
+
+
 Here we're considering 3 bit output, where the counter counts from 0 to 7.  
 
 Below figure shows the output of counter with parameterized interface.
