--- a/13.Interface.md
+++ b/13.Interface.md
@@ -172,6 +172,26 @@ Parameters can be used in interfaces to make vector sizes and other declarations
  
     endmodule:top
 
+Design code for counter
+
+     //Design code for up counter
+     module up_counter(clk,reset,counter);
+     input clk, reset;
+     output [2:0] counter;
+     reg [2:0] counter_up;
+     //up counter
+     always @(posedge clk or posedge reset)
+     begin
+     //if reset=0 count will be incremented
+     if(reset)
+       counter_up <= 3'd0;
+       else
+       counter_up <= counter_up + 3'd1;
+     end 
+     assign counter = counter_up;
+     endmodule:up_counter
+
+
 Test bench for counter
 
      //testbench for up counter
