Updated 14.Constraint (markdown)

--- a/14.Constraint.md
+++ b/14.Constraint.md
@@ -1290,6 +1290,323 @@ Here the constraint solver takes both the constraints into consideration which m
              Fig.  
 
 
+****Soft Constraints**** 
+
+Constraints declared with the keyword soft are called as soft constraints.  
+If any conflict between class constraint and inline constraint leads to a randomization failure, it is clear that it is not possible to override the class constraint by using an inline constraint. So some test-case demand overrides the constraints, this can be done by using a soft keyword in class constraint.   
+
+* **Syntax**  
+`constraint constraint_name { soft variable_name > range ; }`  
+
+* **Example**  
+for a better understanding purpose, we are executing the two codes.
+      
+First Let's take an example for a better understanding of the normal constraints without using soft constraint
+
+        class pack;
+        rand bit [0:3]a;
+        constraint addr_a{a>5;}
+        endclass
+
+       module soft_without_conflict;
+
+       pack pkh;
+       initial begin
+
+       pkh = new;
+       $display("without using soft constraint output");
+       for(int i =0; i<5;i++)
+       begin
+       void'(pkh.randomize());
+
+       $display("\n \t a=%0d value =%0d",i,pkh.a);
+       end
+       pkh = new;
+       $display("\n \t output of without conflict");
+       for(int i =0; i<5;i++)
+       begin
+       void'(pkh.randomize()with {a<10;});
+       $display("\n \t a=%0d value =%0d",i,pkh.a); 
+       end
+       end
+       endmodule   
+
+In the above example, we took a class name as pack which has an object pkh. the class has a constraint name called addr_a in that constraint is displayed from  0 to 5 value. and inside the module we are using inline constraint it will display from 0 to 10 values but we are using here inline constraint so This Constraint addr_a will be overridden.   
+
+* **Output Snap**   
+![Untitled Diagram drawio (10)](https://user-images.githubusercontent.com/106074838/191422207-28ddc66b-7969-4c12-a921-f2d2f1404339.png)
+
+In the above example, in the starting 5 iterations normal constraint are execute so it display the value from 5 to 15  and another 5 iterations inline constraint is executed so it display the value from 10 to 0.    
+
+**GitHub lab file link:**
+
+**GitHub log file link:**
+
+
+Let's take an example for a better understanding of the Soft constraint  
+
+          class pack;
+          rand bit [0:3]a;
+          constraint addr_a{a>5;}
+          endclass 
+
+          module soft_with_conflict;
+          pack pkh;
+          initial begin
+
+          pkh = new;
+          $display("output of soft with conflict ");
+          for(int i =0; i<5;i++)
+          begin
+          void'(pkh.randomize()with {a<5;});
+          $display("\n \t a=%0d value =%0d",i,pkh.a);
+          end
+          pkh = new;
+          $display("\n \t using soft constraint to solve conflict issue");
+          for(int i =0; i<5;i++)
+          begin
+          void'(pkh.randomize()with {soft a<10;});
+
+          $display("\n \t a=%0d value =%0d",i,pkh.a);
+          end
+          end
+          endmodule 
+ 
+In the above example, we took a class name as pack which has an object pkh. the class has a constraint name called addr_a in that constraint as to be displayed from  0 to 5 value but it's not displaying anything. and inside the module we are using inline constraint the is also not displaying anything because here the conflict will occur so resolve this conflict we are using a soft constraint. and it displays the value from 10 to 0 values.  
+
+*  **Output Snap**  
+![Untitled Diagram drawio (11)](https://user-images.githubusercontent.com/106074838/191422256-df39ba5d-6307-4c77-a79a-08cd4f814c11.png)
+
+In the above example, in the starting 5 iterations normal constraint are executed so it displaying the value zero because in the inside code already conflict was occured. another 5 iterations using soft constraint to executing the code, it display the value from 10 to 0.  
+
+
+**GitHub lab file link**
+
+**GitHub log file link**
+
+***
+
+
+****Disable constraint****  
+
+Constraints in a class can be disabled using the **constraint_mode** method  
+By default all the constraints will be enabled, during the randomization constraint user will not consider the disabled constraints.  
+
+constraint_mode(1) means constraint block is enabled  
+constraint_mode(0) means constraint block is disabled  
+The default value of constraint_mode is 1, i.e enabled once the constraint block is disabled, it is required to make constraint_mode(1) enable back the constraint block. 
+
+* **Synatx:**  
+`object_hanlde.constraint_block_name.constraint_mode(enable);`     
+enable == 1, constraint block enable    
+enable == 0, constraint block disable     
+
+
+* **Example**  
+
+Let's take an example for a better understanding of the disabled Constraint     
+
+            class packet;
+            rand  bit [3:0] data;
+            constraint data_range { data inside {5,10,15}; }
+            endclass
+
+            module constraint_mode;
+            packet pkt = new();
+            initial begin
+
+           $display("If constraint is mode is 1 it will display the 5,10,15");
+           $display("If constraint is mode is 0 it will display the random values");
+
+           $display("\t Before Constraint disable");
+           $display("\t Value of constraint mode = %0d",pkt.data_range.constraint_mode());
+           void'( pkt.randomize());
+           $display("\tdata = %0d",pkt.data);
+
+           pkt.data_range.constraint_mode(0);
+
+           $display("After Constraint disable");
+           $display("Value of constraint mode = %0d",pkt.data_range.constraint_mode());
+
+           repeat(5) begin
+           void'(pkt.randomize());
+           $display("\tdata = %0d",pkt.data);
+           end
+           end
+           endmodule   
+
+In the above example, we took a class name as packet which has an object pkt. the class has a constraint name called data_range in that constraint will be displayed 5, 10, 15. constraint mode is enabled (1) it displays the values 5, 10, and 15 and if constraint mode is disabled (0) it displays any values.    
+
+* **Output snap**  
+
+![Untitled Diagram drawio](https://user-images.githubusercontent.com/106074838/191422774-ad3860d7-13a8-4f60-b226-e9e810679f6b.png)  
+
+In the above output, If constraint mode is 1 it displays 5,10,15 and disabled the constraint using constraint mode is 0 then it displays the any random values.   
+
+**GitHub lab file link**
+
+**GitHub log file link**
+
+***
+
+**Disable randomization**  
+
+The rand_mode() method is used to disable the randomization of a variable declared with the rand/randc keyword.   
+    
+   rand_mode(1) means randomization enabled  
+   rand_mode(0) means randomization disabled  
+   The default value of rand_mode is 1, i.e enabled  
+    
+Once the randomization is disabled, it is required to make rand_mode(1) enable back the randomization
+rand_mode can be called as SystemVerilog method, the randomization enables/disable status of a variable can be obtained by calling variable.rand_mode().  
+the rand_mode method returns 1 if randomization is enabled else returns 0  
+
+* **Syntax**  
+
+`object_hanlde.variable_name.rand_mode(enable);`  
+//enable = 1, randomization enable  
+//enable = 0, randomization disable   
+
+* **Example**  
+
+Let's take an example for a better understanding of the disable randomization   
+
+      class packet;
+      rand bit [2:0]data1;
+      randc bit [1:0]data2;
+      int state;
+      function rand_mode1(int a);
+      if(a==0)
+      begin
+        rand_mode(a);
+        state = a;
+      end
+      else if(a==1)
+      begin
+        rand_mode(a);
+        state = a;
+     end
+     endfunction
+     endclass
+
+     module randomization_mode;
+     packet pkt = new();
+     int c;
+     initial begin
+     $display("Before Randomization data1 = %0d data2= %0d",pkt.data1,pkt.data2);
+
+     if(pkt.data1.rand_mode())
+     if (pkt.data2.rand_mode())
+        pkt.state = 1;
+        $display("randomization of all variables are enabled");
+
+        for(int i = 0;i<5;i++)
+        begin
+          c = pkt.randomize();
+          $display("[%0d] After enable the randomizations data1 =%0d, data2 = %0d",i,pkt.data1,pkt.data2);
+          $display("[%0d] state = %0d",i,pkt.state);
+          if(i==3)
+          begin
+            pkt.rand_mode1(0);
+            $display("[%0d] state = %0d",i,pkt.state);
+          end
+          $display("[%0d] After disable in the randomization data1 =%0d, data2 = %0d",i,pkt.data1,pkt.data2);
+        end
+      end
+     endmodule  
+
+In the above example, we took a class name as packet which has an object pkt. inside the class, we are declaring a function name called rand_mode1 which has the variable is state. if state = 1 randomization enabled, state = 0 randomization disabled.  
+we were declaring the output 0 to 5 variations, in that 0 to 3, enable randomization and disable randomization both randomization has happened. and remaining 4 & 5 variations only randomization happens.   
+
+**Output snap**   
+![Untitled Diagram drawio (12)](https://user-images.githubusercontent.com/106074838/191422847-50352caa-f6f3-4e0e-83cd-4c99b4e41031.png)
+
+In the above output, using Randomization mode is 1 to enable the randomization, then it will display the random data . using randomization mode is 0 to disable the randomization, then it display the zero or previous randomization data. In our output snap, iterations from 0 to 3 both randomization enable and disable  is happening and iteration 4 only randomization disable is happening.     
+
+**GitHub lab file link**
+
+**GitHub log file link**
+
+***
+
+**randcase**   
+
+The keyword randcase introduces a case statement that randomly selects one its of branches.  
+
+The case item expressions are positive integer values that represent the weights associated with each item.  
+The probability of selecting an item is derived by the division of that item's weight divided by the sum of all weights.  
+
+**Syntax**  
+
+`randcase`  
+`item: statement`    
+ `endcase`   
+
+**Example**  
+
+Let's take an example for a better understanding of the randcase      
+
+    module r_case;
+    initial begin
+     $display("Random data will be generated by simulator");
+     $display("data from 0 to 3 then it will display randcase output");
+     for(int i =0; i<6;i++)
+     begin
+     randcase
+     0:$display("\t \n output of randcase 0");
+     1:$display("\t \n output of randcase 1");
+     2:$display("\t \n output of randcase 2");
+     3:$display("\t \n output of randcase 3");
+     endcase
+     end
+     end
+     endmodule  
+
+In the above example, we were using randcase, if its expressions match it displays. Each call to **randcase** retrieves one random number in the range of 0 to the sum of the weights. the weights are then selected in declaration order of small random numbers corresponding to the first (top) weight statements. 
+
+**Output snap**  
+![Untitled Diagram drawio (13)](https://user-images.githubusercontent.com/106074838/191423224-4f4560e1-ac94-4808-93e2-e595ae21aa44.png)
+  
+In the above output, using randcase to generate the 0 to 3 values if any expressions is match it displays outputs.  
+In the above-output snap, the sum of all weights is 7; therefore, the probability of taking the first branch is (1/7) i.e. 0.142.
+The probability of taking the second is (2/7) i.e. 0.285, and the probability of taking the third is (3/7) i.e. 0.428. Each call to the randcase statement will return a random number in the range from 0 to 3.  
+  
+
+**GitHub lab file link**
+
+**GitHub log file link**
+
+
+
+ 
+
+
+
+
+ 
+
+
+
+
+
+
+  
+ 
+
+ 
+
+
+ 
+
+
+
+
+
+
+
+ 
+
+
 
 
 
