Updated 14.Constraint (markdown)

--- a/14.Constraint.md
+++ b/14.Constraint.md
@@ -6,7 +6,19 @@ For using the constraint first, we need to assign the random variables by using 
 
 All the constraint blocks are active at the same time.   
 * **Syntax**    
-`constraint  constraint_name{random_variable[range];}  `
+`constraint  constraint_name{random_variable[range];}  `  
+
+**Cheat Sheet**
+
+|S.No.|Constraints|
+|:-----|:----------|
+|1.|[Random Function System](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/14.Constraint#1random-function-system)|
+|2.|[Random Variables](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/14.Constraint#2random-variables)|
+|3.|
+
+
+
+
 
 **Note**-  If the variable is randomised without any constraints, then any value in the range will be assigned to the variable with equal probability. 
 ***
@@ -57,9 +69,9 @@ The below output, fig -1 shows the $random(),$urandom() value and shows the effe
 
                              fig -1 Output - random function 
 
-**GitHub lab file link**  
+**GitHub lab file link**-https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/random_function/random_function.sv
 
-**GitHub log file link**  
+**GitHub log file link** -https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/random_function/random_function_log.log 
 
 ***
 
@@ -111,9 +123,9 @@ Here, the output shows the randomization of variables using rand.
 
                             fig-2 Output - rand 
 
-**GitHub lab code link**  
+**GitHub lab code link**- https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/rand/rand.sv
 
-**GitHub lab output link**
+**GitHub lab output link**- https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/rand/rand_log.log
 
 ### randc  
 randc is random cyclic and cycles through all the values within their range before repeating any particular value.
@@ -149,14 +161,14 @@ The below output shows the randomization of variable using the randc.
 
                                        fig-3 Output- randc 
 
-**GitHub lab code link**   
+**GitHub lab code link**- https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/randc/randc_var.sv  
  
-**GitHub log output link**
+**GitHub log output link**- https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/randc/randc_var_log.log 
 
 
 
 ***
-## Constraint Block 
+## 3.Constraint Block   
 Constraint blocks are the class methods just like function and task. Constraints have a unique name in the class.  
 
 * **Syntax**  
@@ -215,13 +227,13 @@ The output, fig-4 shows the randomization of a variable using an extern constrai
 
                                   fig-4 Output- extern constraint 
 
-**GitHub Lab file link**  
+**GitHub Lab file link**- https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/extern_cons/extern_cons.sv  
  
-**GitHub Lab Output link**-
+**GitHub Lab Output link**- https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/extern_cons/extern_cons_log.log
 
 
 ***
-## Array Randomization  
+## 4.Array Randomization  
 Randomization can also be done in array data types like static array, dynamic array and queues. The variables have to be declared with the type rand or randc to enable the randomization of the variable.  
 
 
@@ -260,9 +272,9 @@ Below fig-5 shows the output of randomization of the one array without using con
 
                                      fig-5 Output-static array randomization  
 
-**GitHub lab code link**  
+**GitHub lab code link**- https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/stat_arr/stat_single/stat_arr_rndm.sv 
 
-**GitHub lab output link**  
+**GitHub lab output link**- https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/stat_arr/stat_single/stat_arr_rndm_log.log 
 
 * **Example -2**-  
 The below example shows the randomization of a two-dimensional static array without using constraint. 
@@ -291,9 +303,9 @@ he output shown in fig-6, the randomization of a two-dimensional array.
 
                                     fig-6 Output- multidimensional array randomization 
 
-**GitHub Lab File Link**  
+**GitHub Lab File Link**- https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/stat_arr/stat_multi/stat_arr_multi.sv 
 
-**GitHub Lab Output Link**  
+**GitHub Lab Output Link**- https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/stat_arr/stat_multi/stat_arr_multi_log.log  
   
 * **Example -3**  
 The below example show the randomization of the multidimensional static array using the constraint. Inside the constraint, foreach loop is used to give the condition to the variable.  Here, the array randomization is done 6 times. As we can see, all the element's value is less than 12.  
@@ -328,9 +340,9 @@ The below example show the randomization of the multidimensional static array us
                               fig-7 Output - multidimensional array randomization using constraint
 
 
-**GitHub Lab File Link**   
+**GitHub Lab File Link**- https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/stat_arr/stat_cons/stat_cons.sv  
 
-**GitHub Lab Output Link**  
+**GitHub Lab Output Link**- https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/stat_arr/stat_cons/stat_cons_log.log  
 
 
  
@@ -374,9 +386,9 @@ The below output is for dynamic array randomization.
                       
                                    fig-8 Output - dynamic array randomization 
  
-**Lab link**
+**Lab link**- https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/dyn_arr/dyn_arr.sv
 
-**log file link**  
+**log file link**-  
 
 ### Queue  
 Queue size will get randomized based on size constraints, and queue elements will get random values.  
@@ -408,7 +420,7 @@ The below example shows the randomization of elements of the queue and using con
 **output log file link**  
 
 
-# Inside constraint
+## 5.Inside constraint
 The inside keyword is used to check if a given value lies within the range.
 The values contained by the inside block can be variable, constant, or range. **inside** construct includes both upper and lower limits and it gathers all values and chooses between the values with equal probability.    
 In the inside block, we write inside keyword followed by curly braces{}
